feat: CSV 파일을 읽어서 학과, 교과목, 공학인증 과목 테이블을 추가하는 ApplicationRunner 구현체 추가
- dev 프로필로 실행 시, 스프링부트 컨테이너 실행 뒤, 초기화 작업 진행